post-talk updates

--- a/index.html
+++ b/index.html
@@ -48,14 +48,6 @@
 				If you need some help or have feedback, please let us know on <a href="https://discord.gg/FGNnbr8qgw">Discord</a>!
 			</p>
 		</div>
-
-		<div class="notice">
-			<h1><span>⚠️</span> Notice Squared</h1>
-			<p>
-				Cichlid is not intended to go live until BlanketCon 25. If you happen to stumble upon this page before
-				then, please keep it to yourself. Information on this page may be inaccurate before then.
-			</p>
-		</div>
 	</div>
 
 	<div class="box-row info-box-row">
@@ -206,6 +198,12 @@
 				If you're a modder, you're welcome to give it a try if interested.
 				There's no template mod yet, but you can see a sample in the <a href="https://github.com/CichlidMC/CichlidGradle">CichlidGradle root project</a>.
 				Join us on <a href="https://discord.gg/FGNnbr8qgw">Discord</a> if you want further information.
+			</p>
+
+			<h1>BlanketCon 25</h1>
+			<p>
+				Cichlid was first revealed to the public at BlanketCon 25. The recording can be found
+				<a href="https://www.youtube.com/watch?v=n7N7W1Ds07Y">here</a>, if you'd prefer a video explaining it.
 			</p>
 		</div>
 	</div>
